data/derived/comb/progs/unify/prog6966.ml.out
Characters 59-60:
  wwhile (funt,b);;
               ^
Error: This expression has type 'a * bool
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a * bool
